@@ -1,80 +1,115 @@
 package com.example.demo;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.mockito.Mockito.lenient;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
 
 import com.example.demo.client.AdminFeignClient;
 import com.example.demo.entity.Book;
 import com.example.demo.service.BookServiceImpl;
 
-@ExtendWith(MockitoExtension.class)
-class BookServiceImplTests {
+class LmsBookServicesApplicationTests {
 
-    @Mock
-    private AdminFeignClient adminFeignClient;
+	@Mock
+	private AdminFeignClient adminFeignClient;
 
-    @InjectMocks
-    private BookServiceImpl bookService;
+	@InjectMocks
+	private BookServiceImpl bookService;
 
-    private Book book25;
-    private Book book26;
-    private Book book27;
-    private Book book29;
-    private Book book30;
+	private Book book;
 
-    @BeforeEach
-    void setUp() {
-        book25 = new Book(25L, "wroom", "wroom-wroom", false, false);
-        book26 = new Book(26L, "work?", "working??", false, false);
-        book27 = new Book(27L, "new title", "new author", true, false);
-        book29 = new Book(29L, "Title", "Author", true, false);
-        book30 = new Book(30L, "Title", "Author", false, true); // Requested
-        System.out.println("Setup books: " + Arrays.asList(book25, book26, book27, book29, book30));
-    }
+	@BeforeEach
+	void setUp() {
+		MockitoAnnotations.openMocks(this);
+		book = new Book(1L, "Title", "Author", false, false);
+	}
 
-    @Test
-    void testGetRequestedBooks() {
-        // Mock the AdminFeignClient to return a list of all books
-        lenient().when(adminFeignClient.getAllBooks()).thenAnswer(invocation -> {
-            List<Book> books = Arrays.asList(book25, book26, book27, book29, book30);
-            System.out.println("Mocked getAllBooks: " + books);
-            return books;
-        });
+	@Test
+	void testGetRequestedBooks() {
+		book.setRequested(true);
+		when(adminFeignClient.getAllBooks()).thenReturn(List.of(book));
 
-        // Call the getRequestedBooks method
-        List<Book> requestedBooks = bookService.getRequestedBooks();
-        System.out.println("Requested books: " + requestedBooks);
+		List<Book> requestedBooks = bookService.getRequestedBooks();
 
-        // Verify the expected behavior
-        assertEquals(1, requestedBooks.size(), "Expected one requested book");
-        assertEquals(book30, requestedBooks.get(0), "Expected book30 to be requested");
-    }
+		assertEquals(1, requestedBooks.size());
+		assertTrue(requestedBooks.get(0).isRequested());
+	}
 
-    @Test
-    void testGetRequestedBooksFailure() {
-        // Mock the AdminFeignClient to return a list of all books without the requested book
-       lenient().when(adminFeignClient.getAllBooks()).thenAnswer(invocation -> {
-            List<Book> books = Arrays.asList(book25, book26, book27, book29);
-            System.out.println("Mocked getAllBooks (failure test): " + books);
-            return books;
-        });
+	@Test
+	void testGetAcceptedBooks() {
+		book.setAccepted(true);
+		when(adminFeignClient.getAllBooks()).thenReturn(List.of(book));
 
-        // Call the getRequestedBooks method
-        List<Book> requestedBooks = bookService.getRequestedBooks();
-        System.out.println("Requested books (failure test): " + requestedBooks);
+		List<Book> acceptedBooks = bookService.getAcceptedBooks();
 
-        // Verify the expected behavior
-        assertNotEquals(1, requestedBooks.size(), "Expected no requested books");
-    }
+		assertEquals(1, acceptedBooks.size());
+		assertTrue(acceptedBooks.get(0).isAccepted());
+	}
+
+	@Test
+	void testRequestBook() {
+		doNothing().when(adminFeignClient).requestBook(1L);
+
+		bookService.requestBook(1L);
+
+		verify(adminFeignClient, times(1)).requestBook(1L);
+	}
+
+	@Test
+	void testReturnBook() {
+		when(adminFeignClient.returnBook(1L)).thenReturn("Book returned successfully");
+
+		String result = bookService.returnBook(1L);
+
+		verify(adminFeignClient, times(1)).returnBook(1L);
+		assertEquals("Book returned successfully", result);
+	}
+
+	@Test
+	void testGetAllBooks() {
+		when(adminFeignClient.getAllBooks()).thenReturn(List.of(book));
+
+		List<Book> books = bookService.getAllBooks();
+
+		assertEquals(1, books.size());
+		assertEquals(book.getId(), books.get(0).getId());
+	}
+
+	@Test
+	void testAcceptBookRequest() {
+		doNothing().when(adminFeignClient).acceptBookRequest(1L);
+
+		bookService.acceptBookRequest(1L);
+
+		verify(adminFeignClient, times(1)).acceptBookRequest(1L);
+	}
+
+	@Test
+	void testRejectBookRequest() {
+		doNothing().when(adminFeignClient).rejectBookRequest(1L);
+
+		bookService.rejectBookRequest(1L);
+
+		verify(adminFeignClient, times(1)).rejectBookRequest(1L);
+	}
+
+	@Test
+	void testRevokeBook() {
+		doNothing().when(adminFeignClient).revokeBook(1L);
+
+		bookService.revokeBook(1L);
+
+		verify(adminFeignClient, times(1)).revokeBook(1L);
+	}
 }
